# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
     },
     "servers": [
         {
-            "url": "http://admin.aast-trainery.com/api/",
+            "url": "http://localhost:8000/api/",
             "description": "Trainery Demo Server"
         }
     ],
@@ -4040,6 +4040,63 @@
                 "summary": "Student saved Posts",
                 "description": "Student saved Posts",
                 "operationId": "Student saved Posts",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/SuccessOkVirtual"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Response401Virtual"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Response403Virtual"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Resource Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Response404Virtual"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
+        "/W/activity": {
+            "get": {
+                "tags": [
+                    "W-StudentActivity"
+                ],
+                "summary": "Student Home Activity section Posts",
+                "description": "Student Home Activity section Posts",
+                "operationId": "Student Home Activity section Posts",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
